release: prepare v1.15.1-patch-v2 (#20)
* feat: expose guest physical addresses for memory regions
* release: prepare v1.15.1-patch-v2
